[tool.poetry]
name = "thermo-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "thermo_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
json-lines = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
